--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,8 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+#因为配置文件包含数据库的用户密码，所以不需要版本管理；
+#.pyc是py文件被当做模块使用生成的。
+dbconfig.py
+*.pyc
